--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { sidebarSections, work } from "../config/config";
 ---
 
 <BaseLayout>
-  <main class="mx-auto p-4 screen-only text-center">
+  <main class="flex justify-center items-center h-20 screen-only text-center">
     <button
       onclick="window.print()"
       class="px-4 py-2 bg-accent text-white rounded">Print / Save as PDF</button
@@ -68,4 +68,5 @@ import { sidebarSections, work } from "../config/config";
       </div>
     </div>
   </div>
+  <footer class="h-20"></footer>
 </BaseLayout>
