--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,12 @@
 ---
 import "../styles/global.css";
+import { profile } from "../config/config";
 
 interface Props {
   title?: string;
 }
 
-const { title = "Patryk Makowski - CV" } = Astro.props;
+const { title = `${profile.name} - CV` } = Astro.props;
 ---
 
 <html lang="en">
